fixing z-index select for hosting

--- a/src/assets/styles/pageAndViewStyle.css
+++ b/src/assets/styles/pageAndViewStyle.css
@@ -30,6 +30,9 @@
     top: -5px !important;
     z-index: 0 !important;
 }
+.css-u9osun {
+    z-index: 0 !important;
+}
 .css-1pysi21-MuiFormLabel-root-MuiInputLabel-root {
     z-index: 0 !important;
     top: -5px !important;
